--- a/src/components/Navigations/navigation.module.scss
+++ b/src/components/Navigations/navigation.module.scss
@@ -71,7 +71,7 @@
             left: -100%;
             background-color: var(--color-dark);
             padding-block: var(--padding-sm);
-            width: 50vw;
+            width: 60vw;
             height: 100vh;
             z-index: 1000;
             transition: 0.3s all ease-in-out;
